# recommender-system

./: README.md  final.ipynb  final.py  pyproject.toml  requirements.txt
notebooks/: movie_recommender.ipynb
